# lab4-d-tolmachev

./: CMakeLists.txt  basic_setup.md
cmake/modules/: FindNTIRPC.cmake
src/: aggregate.cpp  mapper.cpp  mapper.hpp  partitioner.cpp  partitioner.hpp  reducer.cpp  reducer.hpp  sort.cpp
